Replace deprecated URL usage with URI in rest of classes except BasicURLNormalizer